# rime

./: CMakeLists.txt  README.md  makefile  rime.l  rime.tab.c  rime.tab.h  rime.y  rimec
include/: bus.h  mem.h  processor.h  rime.tab.h  util.h
include/rime/: parser.h  rime.h
src/: main.cpp  mem.cpp  processor.cpp  rime.l  rime.tab.c  rime.y.bkp
src/rime/: assembler.cpp  lexer.l  lexer.yy.c  main.cpp  parser.c  parser.y  parser.y.bkp
src/rimec/: lex.yy.c  rime.l  rime.tab.c  rime.tab.h  rime.y  rime.y.bkp
verilog/: Makefile  buffer.v  clock.v  memory.v  out  register.v  test.v
